<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">KomaVideo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tab_videos">All videos</string>
    <string name="tab_folders">Folders</string>

    <string name="nav_local_video_library">Local video library</string>
    <string name="nav_remote_video_library">Online video library</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_exit">Exit</string>

    <string name="action_search">Search</string>
    <string name="action_info">Info</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select all</string>
    <string name="action_sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_add_time">Sort by date added</string>
    <string name="sort_by_play_time">Sort by recently played</string>

    <string name="no_video">No video</string>
    <string name="loading_videos_error">Error while loading videos</string>

    <plurals name="video_count">
        <item quantity="one">%d video</item>
        <item quantity="other">%d videos</item>
    </plurals>

    <plurals name="multi_mode_title">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> selected</item>
        <item quantity="two"><xliff:g id="count">%d</xliff:g> selected</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> selected</item>
    </plurals>
</resources>
