<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_loacl_video"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_local_video_library" />
        <item
            android:id="@+id/nav_remote_video"
            android:icon="@drawable/ic_movie"
            android:title="@string/nav_remote_video_library" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
        </menu>
    </item>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_setting" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/nav_help" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/nav_exit" />
        </menu>
    </item>

</menu>
